Additional theme updates • Update z-index on main nav to fix overlap on dataset form url field • Set max-width on .form-control.chosen-processed to keep items inside region • Update title and panel css on dataset and resource forms

--- a/themes/nuboot_radix/assets/css/nuboot_radix.style.css
+++ b/themes/nuboot_radix/assets/css/nuboot_radix.style.css
@@ -9102,7 +9102,8 @@ div.autocomplete-deluxe-multiple {
   line-height: 34px;
   height: auto;
   padding: 0;
-  border: none; }
+  border: none;
+  max-width: 100% !important; }
   .form-control.chosen-processed .chosen-choices {
     border-radius: 4px;
     border-color: #ccc; }
@@ -9188,6 +9189,17 @@ div.horizontal-tabs {
 
 #body-add-more-wrapper .panel-body {
   padding: 0; }
+
+.page-node-add-dataset h1,
+.page-node-add-resource h1 {
+  margin: 0 0 15px 0; }
+
+.page-node-add-dataset .main .panel-pane,
+.page-node-add-dataset .radix-layouts-content .pane-content,
+.page-node-add-resource .main .panel-pane,
+.page-node-add-resource .radix-layouts-content .pane-content {
+  padding: 0;
+  margin: 0; }
 
 .node-resource-form .field-name-field-upload .form-type-managed-file {
   display: table; }
@@ -9383,7 +9395,7 @@ section.col-sm-9 {
   margin: 0;
   overflow: visible !important;
   position: relative;
-  z-index: 1; }
+  z-index: 3; }
   .navbar-default .navbar-nav,
   .navbar-default .user-menu {
     margin: 0;
