--- a/themes/nuboot_radix/scss/components/_menu.scss
+++ b/themes/nuboot_radix/scss/components/_menu.scss
@@ -29,7 +29,7 @@
   margin: 0;
   overflow: visible !important;
   position:relative;
-  z-index:1;
+  z-index:3;
 
   .navbar-nav,
   .user-menu {
